Checking in code for taking image from camera and photo library

--- a/TakePic/Info.plist
+++ b/TakePic/Info.plist
@@ -53,6 +53,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Please allow selection of photos from the library</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Please allow to use camera</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
